clapi_macros/test_suite/tests/ui/fail/invalid_attribute_key/invalid_subcommand_key.rs
use clapi::macros::*;

#[command]
fn app(){
    #[subcommand(abc="hello")]
    fn child(){}
}

fn main(){}